welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: not found: value talkig
  if((talking == true && hour < 7) || (talkig == true && hour > 20)){return true}
                                       ^