welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if((talking == true && hour < 7) || (talkig == true && hour > 20)){return true}
  else(return false)
}